--- a/pvc.yaml
+++ b/pvc.yaml
@@ -1,25 +1,21 @@
 apiVersion: v1
-kind: PersistentVolume
+kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pv
+  name: postgres-pvc
 spec:
-  capacity:
-    storage: 5Gi
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: "/mnt/data/postgres"
+  resources:
+    requests:
+      storage: 5Gi
 ---
 apiVersion: v1
-kind: PersistentVolume
+kind: PersistentVolumeClaim
 metadata:
-  name: mongo-pv
+  name: mongo-pvc
 spec:
-  capacity:
-    storage: 5Gi
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: "/mnt/data/mongo"
+  resources:
+    requests:
+      storage: 5Gi
