--- a/pv.yaml
+++ b/pv.yaml
@@ -8,6 +8,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
+  storageClassName: microk8s-hostpath
   hostPath:
     path: "/mnt/data/postgres"
 ---
@@ -21,5 +22,6 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
+  storageClassName: microk8s-hostpath
   hostPath:
     path: "/mnt/data/mongo"
