--- a/pvc.yaml
+++ b/pvc.yaml
@@ -21,3 +21,15 @@ spec:
     requests:
       storage: 5Gi
   volumeName: mongo-pv  # Explicit binding to PV
+  ---
+  apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: neo4j-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: microk8s-hostpath
