--- a/secret.yaml
+++ b/secret.yaml
@@ -7,3 +7,5 @@ data:
   POSTGRES_USER: YWRtaW4=   # Base64 encoded "admin"
   POSTGRES_PASSWORD: cGFzc3dvcmQ=   # Base64 encoded "password"
   NEO4J_PASSWORD: cGFzc3dvcmQ=   # Base64 encoded "password"
+  MONGO_USER: YWRtaW4=   # Base64 encoded "admin"
+  MONGO_PASSWORD: cGFzc3dvcmQ=   # Base64 encoded "password"
