--- a/mongo-deployment.yaml
+++ b/mongo-deployment.yaml
@@ -20,12 +20,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: app-secrets
-                  key: MONGO_USER
+                  key: MONGO_INITDB_ROOT_USERNAME
             - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: app-secrets
-                  key: MONGO_PASSWORD
+                  key: MONGO_INITDB_ROOT_PASSWORD
           ports:
             - containerPort: 27017
           volumeMounts:
