--- a/postgres-deployment.yaml
+++ b/postgres-deployment.yaml
@@ -37,3 +37,17 @@ spec:
         - name: postgres-storage
           persistentVolumeClaim:
             claimName: postgres-pvc
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres-service
+spec:
+  selector:
+    app: postgres
+  ports:
+    - protocol: TCP
+      port: 5432       # PostgreSQL Default Port
+      targetPort: 5432
+      nodePort: 30012  # Exposed Port on Host Machine
+  type: NodePort
